--- a/scripts/install
+++ b/scripts/install
@@ -9,6 +9,8 @@
 source _common.sh
 source /usr/share/yunohost/helpers
 
+main_domain=$(cat /etc/yunohost/current_host)
+
 #=================================================
 # APP "BUILD" (DEPLOYING SOURCES, VENV, COMPILING ETC)
 #=================================================
